    ADDED - new DATAOUTPUTFILE allows collected data to be written to a file for later use (automatically enabled in Cacti)
    ADDED - new wmdata: datasource plugin can read data from files produced by DATAOUTPUTFILE
    ADDED - AICONFILLCOLOR accepts 'none' for drawing giant transparent shapes.
    ADDED - Editor 'tidy link' function replaces Vert & Horiz, and does much nicer job
    ADDED - Named offsets. You can define a position relative to a node, give it a name, and use that name for POSITION and NODES. Think switch ports.
    ADDED - KEYBGCOLOR and KEYOUTLINECOLOR both accept 'none'
    ADDED - Some developer documentation - both code documentation and dev/release process docs.
    ADDED - New improved Cycle Maps mode for Cacti plugin, including "cycle only one group" and true fullscreen with crossfading for NOC displays.
    ADDED - Weathermap will use anti-aliasing if your GD supports it (php-bundled GD doesn't) (thanks shd)
    ADDED - Special token formatting can handle timeticks and time_t formatting (%T and %t respectively)
    ADDED - Memory tracking and Cacti templates to track it

0.97c - No code changes apart from path fixes, and ZIP file fixes.

0.97c has no additional changes - it's just 0.97b with some silly errors fixed, and  all
the CSS files included with the correct paths. There were also reports of problems with the
actual zip file.

--

0.97b is a special release starting from 0.97a and backporting all the quick bugfixes from the 0.98 code. 
There are larger structural changes in 0.98 and new features, but these bugfixes were useful enough to
warrant a new 0.97 release (especially the mysql schema change). A real 0.98 release will follow in
due course.

Also late addition to 0.97b - a couple of security analysts have pointed out flaws in the editor.
First, the ability to remotely create .php files and then cross-site-scripting vulnerabilities. Both