@@ -19,6 +19,10 @@
 <li><a href="summary-failing.html">Summary of FAILING image-comparison test results</a> (updated by 'make test')
 <li><a href="code-coverage/">Code coverage report for unit tests</a> (updated by 'make testcoverage')
 </ul>
+<ul>
+<li><a href="md-unused.html">PHPMD unused code report</a> (updated by 'update')
+<li><a href="md-rest.html">PHPMD everything-else code report</a> (updated by 'update')
+</ul>
 
         </div>
         </div>
